--- a/app/views/equipment_assets/show.rhtml
+++ b/app/views/equipment_assets/show.rhtml
@@ -5,7 +5,7 @@
 
 <div class="contextual">
   <span><%= link_to "Add Equipment", new_equipment_asset_path, :class => "icon icon-add" %></span>
-  <span><%= link_to "Check In", equipment_asset_check_in_path(@equipment_asset), :class => "icon icon-time-add" %></span>
+  <span><%= link_to "Check #{@equipment_asset.next_location}", equipment_asset_check_in_path(@equipment_asset), :class => "icon icon-time-add" %></span>
   <span><%= link_to "Print Label", print_equipment_asset_path(@equipment_asset), :class => "icon icon-report" %></span>
   <span><%= link_to "Edit", edit_equipment_asset_path(@equipment_asset), :class => "icon icon-edit" %></span>
   <span><%= link_to "Delete", equipment_asset_path(@equipment_asset), :confirm => "Are you sure?", :method => :delete, :class => "icon icon-del" %></span>
@@ -47,7 +47,7 @@
 </div>
 
 <div class="pluginESV_asset_check_ins">
-  <h3>Check Ins</h3>
+  <h3>History</h3>
   <% if @equipment_asset.asset_check_ins.empty? %>
     <p class="nodata">No data to display</p>
   <% end %>
