updated check_in form

--- a/app/views/asset_check_ins/new.rhtml
+++ b/app/views/asset_check_ins/new.rhtml
@@ -21,6 +21,7 @@
   </div>
   <div class="pluginESV_formfield">
     <%= f.hidden_field :location %>
+		<%= f.hidden_field :user %>
   </div>
   <div class="pluginESV_formfield">
     <%= f.label :equipment_asset_oos, 'Out of service' %><br />
