--- a/app/views/asset_check_ins/new_iphone.rhtml
+++ b/app/views/asset_check_ins/new_iphone.rhtml
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-<title>Check in for <%=h @equipment_asset.name %></title>
+<title>Check #{@equipment_asset.next_location} for <%=h @equipment_asset.name %></title>
 <!-- <meta content="yes" name="apple-mobile-web-app-capable" /> -->
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 <meta content="minimum-scale=1.0, width=device-width, maximum-scale=0.6667, user-scalable=no" name="viewport" />
@@ -26,6 +26,8 @@
     :header_message => "Oops - We couldn't check in!",
     :message => "The following fields were a bit of a problem:",
     :header_tag => :span %>
+		<%= f.hidden_field :location %>
+		<%= f.hidden_field :user %>
   <span class="graytitle">Details</span>
   <ul class="pageitem">
     <%= iphone_details_box(@equipment_asset, false) %>
@@ -33,9 +35,9 @@
     <%= iphone_comment_menu(@equipment_asset.comment) %>
   </ul>
   <% if @asset_check_in.errors.empty? %>
-    <div class="graytitle">Check In</div>
+    <div class="graytitle">Check <%= @equipment_asset.next_location %></div>
   <% else %>
-    <span class="graytitle">Could not check in!</span>
+    <span class="graytitle">Could not check <%= @equipment_asset.next_location %>!</span>
     <ul class="pageitem">
       <li class="textbox">
         <% @asset_check_in.errors.each do |attr,err| %>
@@ -45,16 +47,20 @@
     </ul>
   <% end %>
   <ul class="pageitem">
-    <li class="menu">
-      <%= f.hidden_field :location %>
-      <% location = @asset_check_in.location %>
-      <% location ||= @equipment_asset.location %>
-      <%= link_to "<span class=\"name\">#{location}</span><span class=\"arrow\"></span>",
-        loclist_equipment_asset_asset_check_ins_path(@equipment_asset, :person => @asset_check_in.person, :location => location) %>
-    </li>
+			<% unless @equipment_asset.out? %>
     <li class="bigfield">
+			<%= f.label :person %>
       <%= f.text_field :person, :placeholder => "Person" %>
     </li>
+    <li class="bigfield">
+			<%= f.label :username %>
+      <%= f.text_field :username, :placeholder => "Username" %>
+    </li>
+    <li class="bigfield">
+			<%= f.label :phone %>
+      <%= f.text_field :phone, :placeholder => "Contact Number" %>
+    </li>
+			<% end %>
     <li class="checkbox">
       <span class="name"><%= f.label :equipment_asset_oos, "Out of service?" %></span>
       <%= f.check_box :equipment_asset_oos %>
@@ -62,7 +68,7 @@
   </ul>
   <ul class="pageitem">
     <li class="button">
-      <%= f.submit "Check In" %>
+      <%= f.submit "Check #{@equipment_asset.next_location}" %>
     </li>
   </ul>
 <% end %>
