Updated Mobile Views

--- a/app/views/asset_check_ins/create_iphone.rhtml
+++ b/app/views/asset_check_ins/create_iphone.rhtml
@@ -25,7 +25,7 @@
   <ul class="pageitem">
     <li class="textbox">
       <span class="header">Successfully checked <%= @equipment_asset.location %> <%= @equipment_asset.name %></span>
-      <p>You have checked in <%= @equipment_asset.name %> to <%=h @asset_check_in.location %>.</p>
+      <p>You have checked in <%= @equipment_asset.name %> to <%=h @asset_check_in.person %>.</p>
     </li>
   </ul>
   <span class="graytitle">Details</span>
